docs: update README and add /pageid support
